--- a/FFmpeg/Properties/Resources.resx
+++ b/FFmpeg/Properties/Resources.resx
@@ -120,4 +120,7 @@
   <data name="Convert" xml:space="preserve">
     <value>Convert</value>
   </data>
+  <data name="Human" xml:space="preserve">
+    <value>Homme</value>
+  </data>
 </root>
